--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello React</title>
-</head>
-<body>
-  <div id="react-root"></div>
-  <script src="/build/bundle.js"></script>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Chatty</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
+      @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+    </style>
+  </head>
+
+  <body>
+    <div id="react-root"></div>
+    <script src="/build/bundle.js"></script>
+  </body>
 </html>
