--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Chatty</title>
+    <title>Cloud Nine</title>
     <style>
       @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
       @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
